[gd_scene load_steps=3 format=2]

[ext_resource path="res://userInterface.gd" type="Script" id=1]
[ext_resource path="res://sprites.png" type="Texture" id=2]

[node name="ui" type="Node2D"]
script = ExtResource( 1 )

[node name="Gold" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 128, 80, 16, 16 )

[node name="GoldLabel" type="Label" parent="."]
margin_left = 9.0
margin_top = -7.0
margin_right = 49.0
margin_bottom = 7.0
text = "0"

[node name="Metal" type="Sprite" parent="."]
position = Vector2( 0, 16 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 144, 80, 16, 16 )

[node name="MetalLabel" type="Label" parent="."]
margin_left = 9.0
margin_top = 9.0
margin_right = 49.0
margin_bottom = 23.0
text = "0"

[node name="Magic" type="Sprite" parent="."]
position = Vector2( 0, 32 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 160, 80, 16, 16 )

[node name="MagicLabel" type="Label" parent="."]
margin_left = 9.0
margin_top = 25.0
margin_right = 49.0
margin_bottom = 39.0
text = "0"

[node name="Wood" type="Sprite" parent="."]
position = Vector2( 0, 48 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 128, 96, 16, 16 )

[node name="WoodLabel" type="Label" parent="."]
margin_left = 9.0
margin_top = 41.0
margin_right = 49.0
margin_bottom = 55.0
text = "0"

[node name="Food" type="Sprite" parent="."]
position = Vector2( 0, 64 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 144, 96, 16, 16 )

[node name="FoodLabel" type="Label" parent="."]
margin_left = 9.0
margin_top = 57.0
margin_right = 49.0
margin_bottom = 71.0
text = "0"

[node name="Stone" type="Sprite" parent="."]
position = Vector2( 0, 80 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 160, 96, 16, 16 )

[node name="StoneLabel" type="Label" parent="."]
margin_left = 9.0
margin_top = 73.0
margin_right = 49.0
margin_bottom = 87.0
text = "0"
